auto-test/tests/chapter_18/valid/no_structure_parameters/parse_and_lex/struct_member_looks_like_const.c
struct s {
    int E10;
};

int main(void) {
    struct s x1 = {3};
    return x1.E10;  
}
